<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">BlindMan</string>
    <string name="text_placeholder" translatable="false">Welcome to BlindMan</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-9610917927263970/5517310848</string>
    <string name="ad_unit_test_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_unit_manifest_id" translatable="false">ca-app-pub-9610917927263970~5517310848</string>
    <string name="ad_unit_manifest_test_id" translatable="false">ca-app-pub-3940256099942544~6300978111</string>
    <string name="desc_view" tools:ignore="MissingTranslation">Game Field View</string>
    <string name="desc_text" tools:ignore="MissingTranslation">Info</string>
    <string name="desc_ad" tools:ignore="MissingTranslation">Advertisement</string>
    <string name="empty" translatable="false" tools:ignore="MissingTranslation">""</string>

    <string name="title_level" tools:ignore="MissingTranslation">Level</string>
    <string name="title_size" tools:ignore="MissingTranslation">Size</string>
    <string name="title_lives" tools:ignore="MissingTranslation">Lives</string>
    <string name="title_colors">Colors</string>
    <string name="title_background" tools:ignore="MissingTranslation">Background</string>
    <string name="title_sound" tools:ignore="MissingTranslation">Vibration &amp; Sound</string>
    <string name="title_help" tools:ignore="MissingTranslation">Help</string>
    <string name="title_about" tools:ignore="MissingTranslation">About BlindMan</string>
    <string name="title_quit" tools:ignore="MissingTranslation">Quit</string>
    <string name="title_close" tools:ignore="MissingTranslation">Close</string>

    <string name="mess_start" tools:ignore="MissingTranslation">Tap on the screen to start moving</string>
    <string name="mess_show" tools:ignore="MissingTranslation">Tap on the screen to show the obstacles</string>
    <string name="mess_goal" tools:ignore="MissingTranslation">Congratulations!</string>
    <string name="mess_over" tools:ignore="MissingTranslation">Game Over!</string>
    <string name="mess_hits" tools:ignore="MissingTranslation">Hits:</string>

    <string name="text_help" tools:ignore="MissingTranslation">Tap on the screen to
        create an obstacle pattern. Watch it carefully, remember it!
        \n\nTap to hide the obstacles, and then move the player towards
            the goal. Hit as little obstacles as possible. You can use
            fling gestures to move the player or press and hold on the
            screen to drag it.
        \n\nFor showing the obstacles during the game double-tap on the
            screen. Attention: Turning the device will start a new game.
        \n\nEnjoy!
    </string>
    <string name="text_about" tools:ignore="MissingTranslation">&#169; Oliver Fritz (olivsoft.ch)
        \n\nIcon by signito (signito.ch)
        \n\nThe Android robot is modified from work created and shared by Google and used 
            according to terms described in the Creative Commons 3.0 Attribution License.
        \n\nVersion
    </string>
    <string name="title_midi" tools:ignore="MissingTranslation">Music Player</string>
    <string name="text_midi" tools:ignore="MissingTranslation">Sorry,
        but background music cannot be played on this device.</string>

    <string-array name="items_level">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="items_size">
        <item>Coarse</item>
        <item>Medium</item>
        <item>Fine</item>
    </string-array>
    <string-array name="items_colors">
        <item>Field</item>
        <item>Player</item>
        <item>Obstacles</item>
        <item>Goal</item>
        <item>Reset</item>
    </string-array>
    <string-array name="items_background">
        <item>Off</item>
        <item>Medium</item>
        <item>Full</item>
    </string-array>
    <string-array name="items_effects">
        <item>Vibrations</item>
        <item>Sounds</item>
        <item>Music</item>
    </string-array>

</resources>