<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/level"
        android:title="@string/title_level"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/size"
        android:title="@string/title_size"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/lives"
        android:title="@string/title_lives"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/colors"
        android:title="@string/title_colors"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/background"
        android:title="@string/title_background"
        app:showAsAction="never" />
    <item
        android:id="@+id/sound"
        android:title="@string/title_sound"
        app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:title="@string/title_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/title_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/quit"
        android:title="@string/title_quit"
        app:showAsAction="never" />
    <item
        android:id="@+id/midi"
        android:title="@string/title_midi"
        android:visible="false" />

</menu>